# RustGraphDB

./: Cargo.toml  Teste.py  file.json  graph.json  readme.md
Cli/: Cargo.toml
Cli/src/: lib.rs  main.rs
Python/: main.py
Python/data/: traffic_navigation_dataset.csv
RustCliGraph/src/: lib.rs
Seed/: Cargo.toml  edges.csv  traffic_navigation_dataset copy 2.csv
Seed/src/: lib.rs  main.rs
Server/: .gitignore  Cargo.toml
Server/src/: lib.rs  main.rs
Server/src/lib/api/: handlers.rs  mod.rs  rest.rs
Server/src/lib/auth/: auth.rs
Server/src/lib/errors/: graph_error.rs  mod.rs
Server/src/lib/graph/: edge.rs  graph.rs  mod.rs  node.rs  traversal.rs
Server/src/lib/query/: executor.rs  parser.rs
Server/src/lib/services/: graph_service.rs  mod.rs
Server/src/lib/storage/: disk_storage.rs  id_generator.rs  in_memory_storage.rs  manager.rs  mod.rs  storage.rs
Server/src/lib/utils/: logger.rs
Test/: .gitignore  Cargo.toml
Test/databases/: nodes.csv  traffic_navigation_dataset.csv
Test/logs/: graph_1730036044_output.txt  graph_1730036044_relation.txt  graph_1730036118_output.txt  graph_1730036118_relation.txt  graph_1730036230_output.txt  graph_1730036230_relation.txt
Test/src/: lib.rs  main.rs
Teste/: Cargo.toml
Teste/src/: main.rs
src/: lib.rs  main.rs  modules.rs
src/lib/api/: cli.rs  rest.rs
src/lib/graph/: edge.rs  mod.rs  node.rs  traversal.rs
src/lib/query/: executor.rs  parser.rs
src/lib/services/: graph_error.rs  graph_service.rs  mod.rs
src/modules/: api.rs  graph.rs  graph_utils.rs  persistence.rs  query_engine.rs
(+18 files in other folders)
