[package]
name = "graphdb"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
actix-web = "4.0"
tokio = { version = "1.40.0", features = ["fs"] }
ctrlc = "3.2"
signal-hook = "0.3.17"
