[package]
name = "graphdb"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive", "rc"] }
serde_json = "1.0.133"
chrono = { version = "0.4", features = ["serde"] }
actix-web = "4.0"
tokio = { version = "1.41.1", features = ["full"] }
ctrlc = "3.2"
signal-hook = "0.3.17"
num_cpus = "1.13"
bincode = "1.3.3"
